force-app/main/default/objects/Order_Payment__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Any additional notes or comments related to the
payment.</description>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>