force-app/main/default/objects/Order_Payment__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>The date the payment was made.</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>